add text speed and some other minor changes

--- a/languages/de.json
+++ b/languages/de.json
@@ -10,5 +10,6 @@
   "good_job": "Gute Arbeit!",
   "ask_directions": "Wie komme ich zum/zur ...?",
   "sing_along": "Sing mit uns!",
-  "help_someone": "Kann ich Ihnen helfen?"
+  "help_someone": "Kann ich Ihnen helfen?",
+  "from": "Ich komme aus ..."
 }
