--- a/languages/es.json
+++ b/languages/es.json
@@ -10,5 +10,6 @@
   "good_job": "¡Buen trabajo!",
   "ask_directions": "¿Cómo puedo llegar a ...?",
   "sing_along": "¡Canta con nosotros!",
-  "help_someone": "¿Puedo ayudarle?"
+  "help_someone": "¿Puedo ayudarle?",
+  "from": "Vengo de ..."
 }
