--- a/languages/fr.json
+++ b/languages/fr.json
@@ -10,5 +10,6 @@
   "good_job": "Bon travail !",
   "ask_directions": "Comment puis-je aller à ... ?",
   "sing_along": "Chante avec nous !",
-  "help_someone": "Puis-je vous aider ?"
+  "help_someone": "Puis-je vous aider ?",
+  "from": "Je viens de ..."
 }
