add cultural facts and clean things up

--- a/languages/de.json
+++ b/languages/de.json
@@ -11,5 +11,10 @@
   "ask_directions": "Wie komme ich zum/zur ...?",
   "sing_along": "Sing mit uns!",
   "help_someone": "Kann ich Ihnen helfen?",
-  "from": "Ich komme aus ..."
+  "from": "Ich komme aus ...",
+  "cultural_fact_1": "Germany is known for its diverse varieties of bread.",
+  "cultural_fact_2": "The Oktoberfest in Munich is the largest folk festival in the world.",
+  "cultural_fact_3": "Punctuality is highly valued in Germany.",
+  "cultural_fact_4": "The German Autobahn often has no speed limit.",
+  "cultural_fact_5": "Christmas markets are a popular tradition during Advent in Germany."
 }
