--- a/languages/es.json
+++ b/languages/es.json
@@ -11,5 +11,10 @@
   "ask_directions": "¿Cómo puedo llegar a ...?",
   "sing_along": "¡Canta con nosotros!",
   "help_someone": "¿Puedo ayudarle?",
-  "from": "Vengo de ..."
+  "from": "Vengo de ...",
+  "cultural_fact_1": "Spain is famous for its tradition of afternoon siestas.",
+  "cultural_fact_2": "The Tomatina festival in Buñol involves a massive tomato fight.",
+  "cultural_fact_3": "Flamenco music and dance originated in southern Spain.",
+  "cultural_fact_4": "Spain produces more olive oil than any other country in the world.",
+  "cultural_fact_5": "The Sagrada Familia in Barcelona has been under construction since 1882."
 }
