--- a/languages/es.json
+++ b/languages/es.json
@@ -12,9 +12,11 @@
   "sing_along": "¡Canta con nosotros!",
   "help_someone": "¿Puedo ayudarle?",
   "from": "Vengo de ...",
-  "cultural_fact_1": "Spain is famous for its tradition of afternoon siestas.",
-  "cultural_fact_2": "The Tomatina festival in Buñol involves a massive tomato fight.",
-  "cultural_fact_3": "Flamenco music and dance originated in southern Spain.",
-  "cultural_fact_4": "Spain produces more olive oil than any other country in the world.",
-  "cultural_fact_5": "The Sagrada Familia in Barcelona has been under construction since 1882."
+  "cultural_facts": [
+    "Spain is famous for its tradition of afternoon siestas.",
+    "The Tomatina festival in Buñol involves a massive tomato fight.",
+    "Flamenco music and dance originated in southern Spain.",
+    "Spain produces more olive oil than any other country in the world.",
+    "The Sagrada Familia in Barcelona has been under construction since 1882."
+  ]
 }
