i did something but main thing is they talk back in their language instead of english for more immersion

--- a/languages/ca.json
+++ b/languages/ca.json
@@ -1,17 +1,38 @@
 {
-  "introduce": "Yo fam, I'm ${name} still — you dun know.",
-  "ask_help": "Yo, can you gimme a hand real quick? Man's stressin'.",
-  "order_coffee": "Lemme grab a coffee still — need that.",
-  "thank_you": "Safe g, you’re actually blessed.",
-  "welcome": "Aight, you’re calm. Come tru!",
-  "greet": "Wagwan broski!",
-  "experience": "I been holdin’ it down as a ... ya feel me?",
-  "ask_break": "Yo bossman, can I cut for a quick break? Man’s tired still.",
-  "good_job": "You’re movin proper still — good looks!",
-  "ask_directions": "Yo, how do I reach ... from here fam?",
-  "sing_along": "Yo, run that tune — man’s tryna vibe too!",
-  "help_someone": "You need help or nah? You lookin’ kinda lost still.",
-  "from": "I’m from the ends — outta ...",
+  "translations": {
+    "are_you_lost": "Tings lookin’ rough, you lost or sum?",
+    "buy_coffee_wifi": "You want Wi-Fi? Cop a coffee first, fam.",
+    "wifi_customers_only": "Nah, Wi-Fi’s for customers only, g.",
+    "be_careful": "Keep your head up, not everyone’s on good vibes. You’ll learn, trust.",
+    "come_join_us": "Roll thru, ${name}! We got music, tea, all that.",
+    "pay_more_no_contract": "Throw a lil’ extra, no paperwork. Safe?",
+    "language_not_enough": "Sorry, your lingo’s not there yet. Maybe next time, fam.",
+    "meet_every_week": "We link up every week, ${name}. You should slide!",
+    "library_directions": "Down the block, left at the corner, fam.",
+    "problem_with_papers": "Come with us, there’s a ting with your papers.",
+    "no_longer_needed": "We don’t need you no more, sorry g.",
+    "cousin_restaurant_job": "My cousin works at a restaurant. Maybe they need help, ${name}.",
+    "you_work_hard": "${name}, you work hard!",
+    "part_of_team": "${name}, you’re part of the team now,",
+    "thank_you_help_find_place": "Thank you, ${name}, for helping me find a place. I couldn't have done it alone.",
+    "this_one_your_friend": "${name}, this little one will be your friend now.",
+    "make_difference_here": "${name}, you make a real difference here,"
+  },
+  "phrases": {
+    "introduce": "Yo fam, I'm ${name} still — you dun know.",
+    "ask_help": "Yo, can you gimme a hand real quick? Man's stressin'.",
+    "order_coffee": "Lemme grab a coffee still — need that.",
+    "thank_you": "Safe g, you’re actually blessed.",
+    "welcome": "Aight, you’re calm. Come tru!",
+    "greet": "Wagwan broski!",
+    "experience": "I been holdin’ it down as a ... ya feel me?",
+    "ask_break": "Yo bossman, can I cut for a quick break? Man’s tired still.",
+    "good_job": "You’re movin proper still — good looks!",
+    "ask_directions": "Yo, how do I reach ... from here fam?",
+    "sing_along": "Yo, run that tune — man’s tryna vibe too!",
+    "help_someone": "You need help or nah? You lookin’ kinda lost still.",
+    "from": "I’m from the ends — outta ..."
+  },
   "cultural_facts": [
     "Tdot's a whole vibe — bare cultures mixin' here, no cap.",
     "CN Tower? That’s the tall ting downtown. Tourists love it, but locals barely look at it lmao.",
