--- a/languages/de.json
+++ b/languages/de.json
@@ -1,17 +1,38 @@
 {
-  "introduce": "Hallo, ich heiße ${name}.",
-  "ask_help": "Können Sie mir bitte helfen?",
-  "order_coffee": "Ich hätte gerne einen Kaffee, bitte.",
-  "thank_you": "Danke schön!",
-  "welcome": "Willkommen!",
-  "greet": "Guten Tag!",
-  "experience": "Ich habe Erfahrung als ...",
-  "ask_break": "Darf ich eine Pause machen?",
-  "good_job": "Gute Arbeit!",
-  "ask_directions": "Wie komme ich zum/zur ...?",
-  "sing_along": "Sing mit uns!",
-  "help_someone": "Kann ich Ihnen helfen?",
-  "from": "Ich komme aus ...",
+  "translations": {
+    "are_you_lost": "Haben Sie sich verlaufen?",
+    "buy_coffee_wifi": "Sie möchten WLAN? Sie müssen einen Kaffee kaufen, ja?",
+    "wifi_customers_only": "Entschuldigung, WLAN nur für Kunden.",
+    "be_careful": "Seien Sie vorsichtig, nicht jeder ist freundlich.",
+    "come_join_us": "Kommen Sie, machen Sie mit, ${name}! Wir haben Musik und Tee.",
+    "pay_more_no_contract": "Sie zahlen ein bisschen mehr, kein Vertrag. Okay?",
+    "language_not_enough": "Entschuldigung, Ihre Sprachkenntnisse reichen nicht aus. Vielleicht beim nächsten Mal.",
+    "meet_every_week": "Wir treffen uns jede Woche, ${name}. Du solltest kommen!",
+    "library_directions": "Die Straße runter, an der Ecke links.",
+    "problem_with_papers": "Sie müssen mit uns kommen. Es gibt ein Problem mit Ihren Papieren.",
+    "no_longer_needed": "Entschuldigung, wir brauchen Sie nicht mehr.",
+    "cousin_restaurant_job": "Mein Cousin arbeitet in einem Restaurant. Vielleicht brauchen sie Hilfe, ${name}.",
+    "you_work_hard": "${name}, Sie arbeiten hart!",
+    "part_of_team": "${name}, Sie sind jetzt Teil des Teams.",
+    "thank_you_help_find_place": "Danke, ${name}, dass Sie mir geholfen haben, eine Unterkunft zu finden. Ich hätte es alleine nicht geschafft.",
+    "this_one_your_friend": "${name}, dieser Kleine wird jetzt Ihr Freund sein.",
+    "make_difference_here": "${name}, Sie machen hier wirklich einen Unterschied."
+  },
+  "phrases": {
+    "introduce": "Hallo, ich heiße ${name}.",
+    "ask_help": "Können Sie mir bitte helfen?",
+    "order_coffee": "Ich hätte gerne einen Kaffee, bitte.",
+    "thank_you": "Danke schön!",
+    "welcome": "Willkommen!",
+    "greet": "Guten Tag!",
+    "experience": "Ich habe Erfahrung als ...",
+    "ask_break": "Darf ich eine Pause machen?",
+    "good_job": "Gute Arbeit!",
+    "ask_directions": "Wie komme ich zum/zur ...?",
+    "sing_along": "Sing mit uns!",
+    "help_someone": "Kann ich Ihnen helfen?",
+    "from": "Ich komme aus ..."
+  },
   "cultural_facts": [
     "Germany is known for its diverse varieties of bread.",
     "The Oktoberfest in Munich is the largest folk festival in the world.",
