--- a/languages/es.json
+++ b/languages/es.json
@@ -1,17 +1,38 @@
 {
-  "introduce": "Hola, me llamo ${name}.",
-  "ask_help": "¿Puede ayudarme, por favor?",
-  "order_coffee": "Quisiera un café, por favor.",
-  "thank_you": "¡Muchas gracias!",
-  "welcome": "¡Bienvenido!",
-  "greet": "¡Hola!",
-  "experience": "Tengo experiencia como ...",
-  "ask_break": "¿Puedo tomar un descanso?",
-  "good_job": "¡Buen trabajo!",
-  "ask_directions": "¿Cómo puedo llegar a ...?",
-  "sing_along": "¡Canta con nosotros!",
-  "help_someone": "¿Puedo ayudarle?",
-  "from": "Vengo de ...",
+  "translations": {
+    "are_you_lost": "¿Está perdido?",
+    "buy_coffee_wifi": "¿Quiere wifi? Debe comprar un café, ¿sí?",
+    "wifi_customers_only": "Lo siento, wifi solo para clientes.",
+    "be_careful": "Tenga cuidado, no todos son amables.",
+    "come_join_us": "¡Ven, únete, ${name}! Tenemos música y té.",
+    "pay_more_no_contract": "Paga un poco más, sin contrato. ¿De acuerdo?",
+    "language_not_enough": "Lo siento, su nivel de idioma no es suficiente. Quizás la próxima vez.",
+    "meet_every_week": "Nos reunimos cada semana, ${name}. ¡Deberías venir!",
+    "library_directions": "Baja por la calle y gira a la izquierda en la esquina.",
+    "problem_with_papers": "Debe venir con nosotros. Hay un problema con sus papeles.",
+    "no_longer_needed": "Lo siento, ya no lo necesitamos.",
+    "cousin_restaurant_job": "Mi primo trabaja en un restaurante. Quizás necesiten ayuda, ${name}.",
+    "you_work_hard": "¡${name}, trabajas duro!",
+    "part_of_team": "¡${name}, ahora eres parte del equipo!",
+    "thank_you_help_find_place": "Gracias, ${name}, por ayudarme a encontrar alojamiento. No podría haberlo hecho solo.",
+    "this_one_your_friend": "${name}, este pequeño ahora será tu amigo.",
+    "make_difference_here": "${name}, realmente estás marcando la diferencia aquí."
+  },
+  "phrases": {
+    "introduce": "Hola, me llamo ${name}.",
+    "ask_help": "¿Puede ayudarme, por favor?",
+    "order_coffee": "Quisiera un café, por favor.",
+    "thank_you": "¡Muchas gracias!",
+    "welcome": "¡Bienvenido!",
+    "greet": "¡Hola!",
+    "experience": "Tengo experiencia como ...",
+    "ask_break": "¿Puedo tomar un descanso?",
+    "good_job": "¡Buen trabajo!",
+    "ask_directions": "¿Cómo puedo llegar a ...?",
+    "sing_along": "¡Canta con nosotros!",
+    "help_someone": "¿Puedo ayudarle?",
+    "from": "Vengo de ..."
+  },
   "cultural_facts": [
     "Spain is famous for its tradition of afternoon siestas.",
     "The Tomatina festival in Buñol involves a massive tomato fight.",
