--- a/languages/fr.json
+++ b/languages/fr.json
@@ -1,17 +1,38 @@
 {
-  "introduce": "Bonjour, je m'appelle ${name}.",
-  "ask_help": "Pouvez-vous m'aider, s'il vous plaît ?",
-  "order_coffee": "Je voudrais un café, s'il vous plaît.",
-  "thank_you": "Merci beaucoup !",
-  "welcome": "Bienvenue !",
-  "greet": "Bonjour !",
-  "experience": "J'ai de l'expérience en tant que ...",
-  "ask_break": "Puis-je faire une pause ?",
-  "good_job": "Bon travail !",
-  "ask_directions": "Comment puis-je aller à ... ?",
-  "sing_along": "Chante avec nous !",
-  "help_someone": "Puis-je vous aider ?",
-  "from": "Je viens de ...",
+  "translations": {
+    "are_you_lost": "Vous êtes perdu ?",
+    "buy_coffee_wifi": "Vous voulez du Wi-Fi ? Il faut acheter un café, d'accord ?",
+    "wifi_customers_only": "Désolé, le Wi-Fi est réservé aux clients.",
+    "be_careful": "Faites attention, tout le monde n'est pas amical.",
+    "come_join_us": "Venez nous rejoindre, ${name} ! Nous avons de la musique et du thé.",
+    "pay_more_no_contract": "Vous payez un peu plus, pas de contrat. D'accord ?",
+    "language_not_enough": "Désolé, votre niveau de langue n'est pas suffisant. Peut-être une prochaine fois.",
+    "meet_every_week": "Nous nous réunissons chaque semaine, ${name}. Tu devrais venir !",
+    "library_directions": "Descendez la rue, tournez à gauche au coin.",
+    "problem_with_papers": "Vous devez venir avec nous. Il y a un problème avec vos papiers.",
+    "no_longer_needed": "Désolé, nous n'avons plus besoin de vous.",
+    "cousin_restaurant_job": "Mon cousin travaille dans un restaurant. Ils ont peut-être besoin d'aide, ${name}.",
+    "you_work_hard": "${name}, vous travaillez dur !",
+    "part_of_team": "${name}, vous faites maintenant partie de l'équipe.",
+    "thank_you_help_find_place": "Merci, ${name}, de m'avoir aidé à trouver un logement. Je n'aurais pas pu le faire seul.",
+    "this_one_your_friend": "${name}, ce petit sera maintenant votre ami.",
+    "make_difference_here": "${name}, vous faites vraiment une différence ici."
+  },
+  "phrases": {
+    "introduce": "Bonjour, je m'appelle ${name}.",
+    "ask_help": "Pouvez-vous m'aider, s'il vous plaît ?",
+    "order_coffee": "Je voudrais un café, s'il vous plaît.",
+    "thank_you": "Merci beaucoup !",
+    "welcome": "Bienvenue !",
+    "greet": "Bonjour !",
+    "experience": "J'ai de l'expérience en tant que ...",
+    "ask_break": "Puis-je faire une pause ?",
+    "good_job": "Bon travail !",
+    "ask_directions": "Comment puis-je aller à ... ?",
+    "sing_along": "Chante avec nous !",
+    "help_someone": "Puis-je vous aider ?",
+    "from": "Je viens de ..."
+  },
   "cultural_facts": [
     "France is famous for its cuisine, including cheese, wine, and pastries.",
     "The Eiffel Tower in Paris is one of the most visited monuments in the world.",
