--- a/languages/jm.json
+++ b/languages/jm.json
@@ -1,17 +1,38 @@
 {
-  "introduce": "Wah gwaan, mi name a ${name}.",
-  "ask_help": "Yuh can help mi, please?",
-  "order_coffee": "Mi woulda like a cup a coffee, please.",
-  "thank_you": "Nuff respect!",
-  "welcome": "Bless up!",
-  "greet": "Wah gwaan!",
-  "experience": "Mi have experience as ...",
-  "ask_break": "Mi can tek a likkle break?",
-  "good_job": "Good job, mi boss!",
-  "ask_directions": "Ow mi reach ...?",
-  "sing_along": "Come sing wid wi!",
-  "help_someone": "Mi can help yuh?",
-  "from": "Mi come from ...",
+  "translations": {
+    "are_you_lost": "Yuh lost?",
+    "buy_coffee_wifi": "Yuh want wifi? Yuh haffi buy a coffee, seen?",
+    "wifi_customers_only": "Sorry, wifi a fi customers only.",
+    "be_careful": "Tek care, nuh everybody nice.",
+    "come_join_us": "Come join wi, ${name}! Wi have music an tea.",
+    "pay_more_no_contract": "Pay likkle more, no contract. Alright?",
+    "language_not_enough": "Sorry, yuh language level nuh enough. Maybe next time.",
+    "meet_every_week": "Wi meet every week, ${name}. Yuh fi come!",
+    "library_directions": "Walk down di road an turn left a di corner.",
+    "problem_with_papers": "Yuh haffi come wid wi. Problem deh wid yuh papers.",
+    "no_longer_needed": "Sorry, wi nuh need yuh again.",
+    "cousin_restaurant_job": "Mi cousin work a restaurant. Dem might need help, ${name}.",
+    "you_work_hard": "${name}, yuh work hard!",
+    "part_of_team": "${name}, yuh part a di team now!",
+    "thank_you_help_find_place": "Respect, ${name}, fi help mi find place fi stay. Mi couldn't do it alone.",
+    "this_one_your_friend": "${name}, dis likkle one a yuh friend now.",
+    "make_difference_here": "${name}, yuh really a mek a difference yah so."
+  },
+  "phrases": {
+    "introduce": "Wah gwaan, mi name a ${name}.",
+    "ask_help": "Yuh can help mi, please?",
+    "order_coffee": "Mi woulda like a cup a coffee, please.",
+    "thank_you": "Nuff respect!",
+    "welcome": "Bless up!",
+    "greet": "Wah gwaan!",
+    "experience": "Mi have experience as ...",
+    "ask_break": "Mi can tek a likkle break?",
+    "good_job": "Good job, mi boss!",
+    "ask_directions": "Ow mi reach ...?",
+    "sing_along": "Come sing wid wi!",
+    "help_someone": "Mi can help yuh?",
+    "from": "Mi come from ..."
+  },
   "cultural_facts": [
     "Jamaica is the birthplace of reggae music and Bob Marley.",
     "Ackee and saltfish is Jamaica's national dish.",
