--- a/languages/ua.json
+++ b/languages/ua.json
@@ -1,17 +1,38 @@
 {
-  "introduce": "Привіт, мене звати ${name}.",
-  "ask_help": "Ви можете мені допомогти, будь ласка?",
-  "order_coffee": "Я хотів би каву, будь ласка.",
-  "thank_you": "Дуже дякую!",
-  "welcome": "Ласкаво просимо!",
-  "greet": "Добрий день!",
-  "experience": "Я маю досвід як ...",
-  "ask_break": "Можна мені зробити перерву?",
-  "good_job": "Гарна робота!",
-  "ask_directions": "Як мені пройти до ...?",
-  "sing_along": "Співай з нами!",
-  "help_someone": "Чи можу я вам допомогти?",
-  "from": "Я з ...",
+  "translations": {
+    "are_you_lost": "Ви заблукали?",
+    "buy_coffee_wifi": "Хочете Wi-Fi? Треба купити каву, так?",
+    "wifi_customers_only": "Вибачте, Wi-Fi лише для клієнтів.",
+    "be_careful": "Будьте обережні, не всі тут доброзичливі.",
+    "come_join_us": "Приєднуйтесь до нас, ${name}! У нас є музика і чай.",
+    "pay_more_no_contract": "Ви платите трохи більше, без контракту. Добре?",
+    "language_not_enough": "Вибачте, вашого знання мови недостатньо. Можливо, наступного разу.",
+    "meet_every_week": "Ми зустрічаємось щотижня, ${name}. Тобі варто прийти!",
+    "library_directions": "Вниз по вулиці, на розі ліворуч.",
+    "problem_with_papers": "Вам потрібно піти з нами. Є проблема з вашими документами.",
+    "no_longer_needed": "Вибачте, ви нам більше не потрібні.",
+    "cousin_restaurant_job": "Мій кузен працює в ресторані. Можливо, їм потрібна допомога, ${name}.",
+    "you_work_hard": "${name}, ви багато працюєте!",
+    "part_of_team": "${name}, ви тепер частина команди.",
+    "thank_you_help_find_place": "Дякую, ${name}, що допомогли мені знайти житло. Я б не впорався сам.",
+    "this_one_your_friend": "${name}, цей малюк тепер буде твоїм другом.",
+    "make_difference_here": "${name}, ви справді змінюєте тут щось на краще."
+  },
+  "phrases": {
+    "introduce": "Привіт, мене звати ${name}.",
+    "ask_help": "Ви можете мені допомогти, будь ласка?",
+    "order_coffee": "Я хотів би каву, будь ласка.",
+    "thank_you": "Дуже дякую!",
+    "welcome": "Ласкаво просимо!",
+    "greet": "Добрий день!",
+    "experience": "Я маю досвід як ...",
+    "ask_break": "Можна мені зробити перерву?",
+    "good_job": "Гарна робота!",
+    "ask_directions": "Як мені пройти до ...?",
+    "sing_along": "Співай з нами!",
+    "help_someone": "Чи можу я вам допомогти?",
+    "from": "Я з ..."
+  },
   "cultural_facts": [
     "Ukraine is the largest country entirely in Europe.",
     "Kyiv is the capital and largest city of Ukraine.",
