make more user friendly and fun

--- a/languages/ca.json
+++ b/languages/ca.json
@@ -39,6 +39,7 @@
     "Caribana’s a movie every summer — the city gets too live, fam.",
     "You’ll hear bare accents in Toronto — Jamaican, Somali, Punjabi, everything — man’s multilingual by default.",
     "We don’t play when it comes to food. Shawarma, patties, jerk, pho — it’s all here and it’s all fire.",
+    "If you hear someone say 'mans' or 'ting', you’re definitely in Toronto — that’s just how we talk.",
     "Toronto slang is diff — if you know, you know. Man’s can say 'you’re blessed' and that’s a full sentence.",
     "Drizzy (Drake) really put The 6 on the map — now everybody wanna claim Toronto.",
     "Weather’s mad bipolar here — snow in the morning, sun in the afternoon, hoodie n shorts type beat.",
